--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query-devtools": "^5.8.4",
     "axios": "^1.6.2",
     "classnames": "^2.5.1",
+    "dompurify": "^3.1.2",
     "framer-motion": "^10.16.14",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -30,6 +31,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/lodash": "^4.14.201",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.15",
